# uvcview

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  capture.glade  capture.gladep  config.h  config.status  configure  configure.in  notes.md  uvcview.spec
po/: Makefile  Makefile.in  ru.po
prebuild/: uvcview
src/: Makefile  Makefile.am  Makefile.in  main.c  uvccapture.conf
